package commanding;
option java_package = "org.yamcs.protobuf";

import "yamcs.proto";


message CommandId {
   required int64 generationTime=1;
   required string origin=2;
   required int32 sequenceNumber=3; //this has to be unique in relation to the generation time and origin
   optional string commandName=4;
}

/************* Command Queue Control ********************/
enum QueueState {
   BLOCKED=1;
   DISABLED=2;
   ENABLED=3;
}

message CommandQueueInfo {
    required string instance=1;
    required string channelName=2;
    required string name=3;
    optional QueueState state=4;
}

/*One entry (command) in the command queue*/
message CommandQueueEntry {
   required string instance=1;
   required string channelName=2;
   required string queueName=3;
   required CommandId cmdId=4;
   optional string source=5;
   optional bytes binary=6;
   optional string username=7;
   optional int64 generationTime=8;
}


message CommandQueueRequest {
   optional CommandQueueInfo queueInfo=1; // for SetQueueState
   optional CommandQueueEntry queueEntry=2; //for SendCommand and RejectCommand
   optional bool rebuild=3[default=false]; //if rebuild is true, the binary packet will be recreated to include new time and sequence count
}
service CommandQueueControl { //rpc requests sent to the cmdQueueControl address
  rpc SetQueueState(CommandQueueInfo) returns (yamcs.Void);
  rpc SendCommand(CommandQueueRequest) returns (yamcs.Void);
  rpc RejectCommand(CommandQueueEntry) returns (yamcs.Void);
}


/********************* Command History ***********************/

message CommandHistoryAttribute {
    required string name = 1;
    required yamcs.Value value = 2;
}

message CommandHistoryEntry {
    required CommandId cmdId = 1;
    required string cmdName = 2;
    repeated CommandHistoryAttribute attr = 3 ;
}
